Fixed left alignment

--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@ body {
 
 a {
     font-size: small;
+    margin-left: .2rem;
 }
 
 label {
     height: 1em;
     width: 100%;
+    margin-left: .2rem;
 }
 
 input {
@@ -32,7 +34,7 @@ input {
 .program-text textarea {
     width: 100%;
     height: 10em;
-    margin: .2em;
+    margin: .2rem;
     box-sizing: border-box;
     resize: vertical;
 }
